# nextjs-flask-web-app

./: .gitignore  CLAUDE.md  Makefile
.claude/: settings.local.json
gui/: Makefile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
gui/src/app/: globals.css  layout.tsx  page.tsx
gui/src/components/: etrade-connect.tsx  positions-grid.tsx  providers.tsx  settings-dropdown.tsx
gui/src/components/app/: account-summary.tsx  dollar-cell.tsx  exit-cell.tsx  pl-cell.tsx
gui/src/components/ui/: button.tsx
gui/src/lib/: store.ts  strategies.test.ts  strategies.ts
gui/src/lib/features/: counterSlice.test.ts  counterSlice.ts  etradeSlice.ts
server/: Makefile  pyproject.toml
server/app/: __init__.py  cli.py  dev.py  etrade.py
server/app/handlers/: api.py  etrade.py  pages.py
